<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".cal">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="416dp"
        android:layout_height="108dp"
        android:layout_marginTop="36dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result">

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="mod"
            android:layout_margin="2dp"
            android:backgroundTint="#FFA500"
            android:text="@string/modulus"
            android:textSize="60sp" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="pow"
            android:layout_margin="2dp"
            android:backgroundTint="#FFA500"
            android:text="@string/pow"
            android:textSize="60sp" />

        <Button
            android:id="@+id/button09"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="div"
            android:layout_margin="2dp"
            android:backgroundTint="#FFA500"
            android:text="@string/div"
            android:textSize="60sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="229dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:scrollbarSize="14sp"
        android:text="CALCULATOR"
        android:textColor="#FFA500"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout10"
        android:layout_width="416dp"
        android:layout_height="90dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1">

        <Button
            android:id="@+id/button20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="addition"
            android:layout_margin="2dp"
            android:backgroundTint="#FFA500"
            android:text="@string/add"
            android:textSize="60sp" />

        <Button
            android:id="@+id/button80"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="subtraction"
            android:layout_margin="2dp"
            android:backgroundTint="#FFA500"
            android:text="@string/sub"
            android:textSize="60sp" />

        <Button
            android:id="@+id/button90"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="multiplication"
            android:layout_margin="2dp"
            android:backgroundTint="#FFA500"
            android:text="@string/mul"
            android:textSize="60sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="341dp"
        android:layout_height="92dp"
        android:layout_marginTop="72dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.628"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <EditText
            android:id="@+id/num1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="ENTER NUM1"
            android:inputType="number"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff" />

        <EditText
            android:id="@+id/num2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="ENTER NUM2"
            android:inputType="number"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff" />

    </LinearLayout>

    <TextView
        android:id="@+id/result"
        android:layout_width="420dp"
        android:layout_height="92dp"
        android:layout_marginTop="48dp"
        android:text="@string/result"
        android:textColor="#ffffff"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>